# Udacity-Sensor-Fusion-Nanodegree

./: .gitignore  README.md
Camera/: README.md
Camera/Lesson-2-Autonomous-Vehicles-and-Computer-Vision/The OpenCV Library/: .student_bashrc
Camera/Lesson-2-Autonomous-Vehicles-and-Computer-Vision/The OpenCV Library/OpenCV_exercises/: CMakeLists.txt
Camera/Lesson-2-Autonomous-Vehicles-and-Computer-Vision/The OpenCV Library/OpenCV_exercises/src/: load_image_1.cpp
Camera/Lesson-3-Engineering-a-Collision-Detection-System/Estimating TTC with Camera/: .student_bashrc
Camera/Lesson-3-Engineering-a-Collision-Detection-System/Estimating TTC with Lidar/: .student_bashrc
Camera/Lesson-3-Engineering-a-Collision-Detection-System/Estimating-TTC-with-Camera/TTC_camera/: CMakeLists.txt
Camera/Lesson-3-Engineering-a-Collision-Detection-System/Estimating-TTC-with-Camera/TTC_camera/src/: compute_ttc_camera.cpp  dataStructures.h  structIO.cpp
Camera/Lesson-3-Engineering-a-Collision-Detection-System/Estimating-TTC-with-Lidar/TTC_lidar/: CMakeLists.txt
Camera/Lesson-3-Engineering-a-Collision-Detection-System/Estimating-TTC-with-Lidar/TTC_lidar/src/: compute_ttc_lidar.cpp  structIO.cpp
Camera/Lesson-4-Tracking-Image-Features/Descriptor Matching/: .student_bashrc
Camera/Lesson-4-Tracking-Image-Features/Descriptor Matching/descriptor_matching/: CMakeLists.txt
Camera/Lesson-4-Tracking-Image-Features/Descriptor Matching/descriptor_matching/src/: dataStructures.h  descriptor_matching.cpp
Camera/Lesson-4-Tracking-Image-Features/Gradient-based vs. Binary Descriptors/: .student_bashrc
Camera/Lesson-4-Tracking-Image-Features/Harris Corner Detection/: .student_bashrc
Camera/Lesson-4-Tracking-Image-Features/Intensity Gradient and Filtering/: .student_bashrc
Camera/Lesson-4-Tracking-Image-Features/Intensity-Gradient-and-Filtering/gradient_filtering/: CMakeLists.txt
Camera/Lesson-4-Tracking-Image-Features/Intensity-Gradient-and-Filtering/gradient_filtering/src/: gaussian_smoothing.cpp  gradient_sobel.cpp  magnitude_sobel.cpp
Camera/Lesson-4-Tracking-Image-Features/Overview of Popular Keypoint Detectors/: .student_bashrc
Camera/Lesson-5-Project-2D-Feature-Tracking/: CMakeLists.txt  README.md
Camera/Lesson-5-Project-2D-Feature-Tracking/results/: AKAZE-AKAZE-keypoints.txt  AKAZE-AKAZE-matchedkeypoints.txt  AKAZE-BRIEF-matchedkeypoints.txt  AKAZE-BRISK-matchedkeypoints.txt  AKAZE-ORB-matchedkeypoints.txt  AKAZE-SIFT-matchedkeypoints.txt  BRISK-BRIEF-matchedkeypoints.txt  BRISK-BRISK-matchedkeypoints.txt  BRISK-FREAK-keypoints.txt  BRISK-FREAK-matchedkeypoints.txt  BRISK-ORB-matchedkeypoints.txt  BRISK-SIFT-matchedkeypoints.txt  Camera-2D-Feature-Tracking-Results.xlsx  FAST-BRIEF-matchedkeypoints.txt  FAST-BRISK-keypoints.txt  FAST-BRISK-matchedkeypoints.txt  FAST-FREAK-matchedkeypoints.txt  FAST-ORB-matchedkeypoints.txt  FAST-SIFT-matchedkeypoints.txt  HARRIS-BRIEF-keypoints.txt  HARRIS-BRIEF-matchedkeypoints.txt  HARRIS-BRISK-matchedkeypoints.txt  HARRIS-FREAK-matchedkeypoints.txt  HARRIS-ORB-matchedkeypoints.txt  HARRIS-SIFT-matchedkeypoints.txt  ORB-BRIEF-matchedkeypoints.txt  ORB-BRISK-matchedkeypoints.txt  ORB-FREAK-keypoints.txt  ORB-FREAK-matchedkeypoints.txt  ORB-ORB-matchedkeypoints.txt  ORB-SIFT-matchedkeypoints.txt  SHITOMASI-BRIEF-matchedkeypoints.txt  SHITOMASI-BRISK-matchedkeypoints.txt  SHITOMASI-FREAK-matchedkeypoints.txt  SHITOMASI-ORB-matchedkeypoints.txt  SHITOMASI-SIFT-keypoints.txt  SHITOMASI-SIFT-matchedkeypoints.txt  SIFT-BRIEF-matchedkeypoints.txt  SIFT-BRISK-matchedkeypoints.txt  SIFT-FREAK-matchedkeypoints.txt  (+2 more)
Camera/Lesson-5-Project-2D-Feature-Tracking/src/: MidTermProject_Camera_Student.cpp  dataStructures.h  matching2D.hpp  matching2D_Student.cpp
Camera/Lesson-6-Combining-Camera-and-Lidar/Creating 3D-Objects/: .student_bashrc
Camera/Lesson-6-Combining-Camera-and-Lidar/Lidar-to-Camera Point Projection/lidar_to_camera/: CMakeLists.txt
Camera/Lesson-6-Combining-Camera-and-Lidar/Lidar-to-Camera Point Projection/lidar_to_camera/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp
Camera/Lesson-6-Combining-Camera-and-Lidar/Object-Detection-with-YOLO/detect_objects/: CMakeLists.txt
Camera/Lesson-6-Combining-Camera-and-Lidar/Object-Detection-with-YOLO/detect_objects/src/: dataStructures.h  detect_objects_2.cpp
Camera/Lesson-7-Project-3D-Object-Tracking/: README.md
Camera/Lesson-7-Project-3D-Object-Tracking/src/: lidarData.cpp  (+4 more)
Kalman_Filters/jacobian-matrix-exercise/: cal_jacobian.cpp
Kalman_Filters/kf-equation-exercise/: kf_filter_equations.cpp
Kalman_Filters/laser-measurement-exercise/: kalman_filter.cpp  kalman_filter.h  main.cpp  measurement_package.h  tracking.cpp  tracking.h
Kalman_Filters/root-mean-squared-err-exercise/: cal_rmse.cpp
Kalman_Filters/sigma-points-exercise/: main.cpp  ukf.cpp  ukf.h
Kalman_Filters/ukf-augmentation-exercise/: main.cpp  ukf.cpp  ukf.h
Kalman_Filters/ukf-exercise/: main.cpp  ukf.cpp
Kalman_Filters/unscented-kalman-filter-project/: CMakeLists.txt  README.md
Lidar_Obstacle_Detection/: CMakeLists.txt  README.md
Lidar_Obstacle_Detection/src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
Radar/: README.md
Radar/exercises/: cfar_1d.m  fft.m  fft_2d.m  max_range_cal.m  range_cal.m  sensor_fusion_with_radar.m  velocity_cal.m
Radar/project/: README.md  radar_target_generation_and_detection.m
lectures/: lec1-1-lidar-and-point-clouds.md  lec1-2-point-cloud-segmentation.md  lec1-3-clustering-obstacles.md  lec1-4-work-with-pcd.md  lec2-1-av-and-opencv.md  lec2-2-collision-detection-system.md  lec2-3-track-image-features.md  lec2-4-combine-camera-lidar.md  lec3-1-radar-principles.md  lec3-2-range-doppler-estimation.md  lec3-3-clutter.md  lec3-4-clustering-and-tracking.md  lec4-1-kalman-filters.md  lec4-2-lidar-radar-fusion-with-KF.md  lec4-3-unscented-kalman-filters.md
(+358 files in other folders)
